--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
 body {
     margin: 0;
-    background-color: #1C1C1C;
+    /* background-color: #1C1C1C; */
     color: white;
     font-family: 'Inter', sans-serif;
+    background: url("./background.gif");
 }
 
 .title {
