--- a/index.css
+++ b/index.css
@@ -32,7 +32,10 @@ body {
 
 #gen-pass-btn:hover, 
 #passwordOne:hover,
-#passwordTwo:hover {
+#passwordTwo:hover,
+#gen-pass-btn:focus,
+#passwordOne:focus,
+#passwordTwo:focus {
     box-shadow: 0px 0px 5px white;
     text-shadow: 0px 0px 5px black;
 
